...
                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZu-l0-2IF">
                                <rect key="frame" x="251" y="230" width="98" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="98" id="xPk-LA-lzq"/>
                                </constraints>
                                <state key="normal" title="Start Survey"/>
                                <connections>
                                    <action selector="onSurveyTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="v30-h6-YM6"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3YH-W6-2Jr">
                                <rect key="frame" x="256" y="303" width="89" height="30"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aWd-Bq-X3g">
                                <rect key="frame" x="268" y="550" width="64" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="64" id="BNt-Ds-Ptd"/>
                                </constraints>
                                <state key="normal" title="Logout">
                                    <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="onLogoutTouch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Bqc-hi-1iV"/>
                                </connections>
                            </button>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="hjv-X8-OsC">
                                <rect key="frame" x="143" y="456" width="314" height="29"/>
                                <animations/>
                                <segments>
                                    <segment title="Yes"/>
                                    <segment title="Likely"/>
                                    <segment title="Neutral"/>
                                    <segment title="Unlikely"/>
                                    <segment title="No"/>
                                </segments>
                                <connections>
...
